# tkn-codex-plugins

./: .gitignore  README.md  README_ja.md
plugins/tkn-codex-context-engineering/: README.md  README_ja.md  pyproject.toml
plugins/tkn-codex-context-engineering/.codex-plugin/: plugin.json
plugins/tkn-codex-context-engineering/lib/tkn_codex_context/: __init__.py  chat_logs.py  cli.py  common.py  file_io.py  frontmatter.py  safety.py  session_notes.py
plugins/tkn-codex-context-engineering/scripts/: windows_task_scheduler.ps1
plugins/tkn-codex-context-engineering/scripts/context_bridge/: README.md  audit_context_freshness.py  context_bridge.py  init_project_context.py  register_project_context.py
plugins/tkn-codex-context-engineering/skills/audit-context-freshness/: SKILL.md
plugins/tkn-codex-context-engineering/skills/cleanup-local-runtime/: SKILL.md
plugins/tkn-codex-context-engineering/skills/distill-session-context/: SKILL.md
plugins/tkn-codex-context-engineering/skills/extract-codex-sessions/: SKILL.md
plugins/tkn-codex-context-engineering/skills/import-global-context/: SKILL.md
plugins/tkn-codex-context-engineering/skills/init-project-context/: SKILL.md
plugins/tkn-codex-context-engineering/skills/maintain-session-note/: SKILL.md
plugins/tkn-codex-context-engineering/skills/maintain-working-context/: SKILL.md
plugins/tkn-codex-context-engineering/skills/migrate-local-project-context/: SKILL.md
plugins/tkn-codex-context-engineering/tests/: test_artifact_schema_compatibility.py  test_chat_log_compatibility.py  test_session_note_pipeline.py
(+51 files in other folders)
