[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "tkn-codex-context-engineering"
version = "0.15.0"
description = "Private Codex project context and session-note tooling"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Tuckn" }]
dependencies = []

[project.scripts]
tkn-codex-context = "tkn_codex_context.cli:main"

[tool.setuptools]
package-dir = { "" = "lib" }

[tool.setuptools.packages.find]
where = ["lib"]
